Update ansible files

--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,27 +1,32 @@
----
-
-- hosts: webserver
+- hosts: webservers
   become: True
   tasks:
-    - name: install pip
+    - name: Install python & docker packages
       yum:
-        name: python-pip
+        name: python3,docker
         state: present
-    - name: install docker
-      yum:
+
+    - name: install docker packages
+      pip:
         name: docker
         state: present
+        executable: pip3
+
     - name: start docker service
       service:
         name: docker
         state: started
         enabled: true
-    - name: install required packages
-      pip:
-        name: docker-py
-        state: present
+
+    - name: Setting facts so that they will be persisted in the fact cache
+      set_fact:
+        ansible_python_interpreter: /usr/bin/python3
+
     - name: Create  container
       docker_container:
         name: nodeapp
-        image: {{image_name}}:{{release_tag}}
+        image: "{{image_name}}:{{release_tag}}"
         published_ports: ["8082:8082"]
+
+    - name: Check if container is running
+      shell: docker ps
