Update ansible files

--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -23,7 +23,7 @@
         ansible_python_interpreter: /usr/bin/python3
 
     - debug:
-        msg: "{{image_name}}:{{release_tag}}"
+        msg: "Deploying image:{{image_name}}:{{release_tag}}"
 
     - name: Create  container
       docker_container:
